# hashistack-healthcare

./: .dockerignore  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  netlify.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  lab-bug.yml  proof-review.yml  setup-friction.yml
.github/workflows/: ci.yml  cloudflare-dns.yml  evals.yml  portability.yml  staging-preview.yml  staging.yml
deploy/cloudflared/: staging.yml.example
docs/: GOAL.md  README.md  capstone-case-study.md  deployment.md  digitalocean-runbook.md  documentation-standard.md  evidence-index.md  hashicorp-steering.md  ops-runbook.md  product-use-case.md  troubleshooting.md
docs/decisions/: 0001-agent-routing.md  0002-inference-test-tiers.md  0003-evidence-basis-and-stubbed-verdicts.md  0004-audit-broker-and-hmac.md  0005-operator-access.md  0006-durable-mutation-and-cleanup-invariants.md  0007-shakti-design-system-provenance.md  0008-cloudflare-delivery-boundary.md  0008-shakti-ui-vendoring-clearance.md  0009-agent-workspace-and-model-routing.md  0010-minimum-lovable-runtime.md
docs/design/: wireframes-standalone.html  wireframes.dc.html
docs/evals/: digitalocean-production-proof-2026-07-12.md  gemma-signed-recipe-profile-2026-07-13.json  gemma-signed-recipe-profile-2026-07-13.md  local-infrastructure-proof-2026-07-12.md  pr-stack-proof-2026-07-12.md  sample-artifact-profiles.json  sample-artifact-profiles.md  scorecard.json  scorecard.md
docs/evidence/: digitalocean-staging-preview-2026-07-12.md  minimum-lovable-inventory-2026-07-13.md
docs/get-started/: hosted-preview.md  local.md
docs/investigations/: 0001-enable-all-use-cases.md  0002-local-model-simplifiers.md  0003-hermes-local-experiment.md  0004-bonsai-llamacpp-planner-baseline.md  0005-bounded-generative-fill.md  0006-liquid-hermes-coding-floor.md
docs/journey/: README.md  delivery-infra.md  doctor-ui.md  exported-app.md  framework-treatments.md
docs/operations/: 2026-07-13-shutdown-record.md  clerk.md
docs/postmortems/: 2026-07-13-scope-failure-and-shutdown.md
docs/process/: gitops-treatments.md  merge-readiness-2026-07-12.md  merge-standard.md  pr-issue-disposition-2026-07-12.md  review-log.md  trunk-proof-and-tradeoffs-2026-07-12.md
docs/reference/: access-control.md  commands.md
docs/research/: anthony-doctor-jobs.md
docs/rfc/: 0001-clinician-platform.md  (+1 more)
evals/: README.md
export-assets/: web-package-lock.json
migrations/: 0001_init.sql
packer/: README.md  client.pkr.hcl  control-plane.pkr.hcl
packs/ambient-scribe/scaffold/: Cargo.toml
packs/ambient-scribe/scaffold/src/: main.rs
packs/post-op-monitor/scaffold/: Cargo.toml
packs/post-op-monitor/scaffold/src/: main.rs
prompts/: digitalocean-treatment-planner-v1.txt
scripts/: digitalocean-runner-firewall.sh  docs-check.sh  evals.sh  generative-fill-experiment.sh  journey.sh  ladder-exercise.sh  merge-gate.sh  pressure-test.sh  profile-gemma-planner.sh  single-host-configure-agent.sh  single-host-release.sh  single-host-remote-proof.sh  single-host-smoke.sh  staging-docker-up.sh  staging-up.sh
src/: agent.rs  anonymous.rs  api.rs  audit.rs  clerk.rs  deploy.rs  eject.rs  gates.rs  hashi.rs  identity.rs  ladder.rs  lib.rs  main.rs  packs.rs  refusals.rs  state.rs  store.rs  workspace.rs  workspace_agent.rs  workspace_verifier.rs
staging/: identities.hcl  nomad-docker-client.hcl
tests/: audit_broker_contract.rs  evidence_contract.rs  identity_contract.rs  ladder_contract.rs  platform_contract.rs  proof_contract.rs  router_contract.rs  routing_contract.rs  store_contract.rs
verifier/: Dockerfile  README.md  package-lock.json  package.json  verify.mjs
verifier/rust-cache/: Cargo.toml
web/: index.html
(+279 files in other folders)
