[package]
name = "rust-proof-service"
version = "0.1.0"
edition = "2021"

# Pack scaffolds are standalone crates a doctor can eject and own; they are
# never part of the platform build (CI tests each one in its own job).
[workspace]
exclude = ["packs/*/scaffold"]

[dependencies]
anyhow = "1"
axum = "0.7"
hcl-rs = "0.19.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
