[package]
name = "rust-proof-service"
version = "0.1.0"
edition = "2021"

# Pack scaffolds are standalone crates a doctor can eject and own; they are
# never part of the platform build (CI tests each one in its own job).
[workspace]
exclude = ["packs/*/scaffold"]

[dependencies]
anyhow = "1"
axum = "0.7"
base64 = "0.22"
getrandom = "0.2"
hcl-rs = "0.19.7"
hmac = "0.12"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
tracing = "0.1"
tracing-subscriber = "0.3"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
