[package]
name = "practice-studio-verifier-cache"
version = "0.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
tower = { version = "0.5", features = ["util"] }
