[package]
name="ambient-scribe-app"
version="0.1.0"
edition="2021"
[workspace]
[[bin]]
name="app"
path="src/main.rs"
[dependencies]
axum="0.7"
serde={version="1",features=["derive"]}
serde_json="1"
sha2="0.10"
tokio={version="1",features=["io-util","macros","net","rt-multi-thread","time"]}
[dev-dependencies]
tower={version="0.5",features=["util"]}
